redmine/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            memory: "600Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
