redmine/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
  namespace: postgres
spec:
  selector:
    app: redmine
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
